lots and lots of lint fixes AND other memory allocation fixes (?)